--- a/index.html
+++ b/index.html
@@ -5,10 +5,31 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Lesson</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <link rel="stylesheet" href="css/flexboxgrid.min.css">
   <link rel="stylesheet" href="css/main.min.css">
 </head>
 <body>
+  <form id="form" class="w-50 m-4">
+    <div class="form-group">
+      <input type="text" class="form-control form-fname"  placeholder="name">
+      <input type="text" class="form-control form-surname"  placeholder="Surname">
+      <input type="number" class="form-control form-age"  placeholder="age">
+      <input type="text" class="form-control form-passpost"  placeholder="passpost">
+      <input type="number" class="form-control form-dollar"  placeholder="dollar">
+
+      <p class="dollar">Dollar kursi: <span id="dollarC"></span></p>
+    </div>
+    <button type="submit" class="btn btn-primary">Go</button>
+  </form>
+
+  <ul class="list-group w-50 m-4">
+    <li class="list-group-item item-name">Name <b></b></li>
+    <li class="list-group-item item-age">Age: <b></b></li>
+    <li class="list-group-item item-passpost">Passpost <b></b></li>
+    <li class="list-group-item item-som">Som <b></b></li>
+    <li class="list-group-item item-dollar">Dollar <b></b></li>
+  </ul>
 
   <script src="js/main.js"></script>
 </body>
